--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Nomia</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="ru">
+   
+   <head>
+      <meta charset="utf-8">
+      <title>ERP</title>
+      <base href="/">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
+   </head>
+   
+   <body class="font-main antialiased flex flex-col min-h-screen bg-gray-200">
+      <app-header></app-header>
+      <main class="flex-grow">
+         <app-root></app-root>
+      </main>
+   </body>
+   
 </html>
