--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
       <link rel="icon" type="image/x-icon" href="favicon.ico">
    </head>
    
-   <body class="font-main antialiased flex flex-col min-h-screen bg-gray-200">
+   <body class="font-main antialiased flex flex-col bg-gray-200 min-h-screen">
       <app-header></app-header>
-      <main class="flex-grow">
+      <main class="flex-grow relative">
          <app-root></app-root>
       </main>
    </body>
