--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
    
    <body class="font-main antialiased flex flex-col bg-gray-200 min-h-screen">
       <app-header></app-header>
-      <main class="flex-grow relative">
+      <main class="relative flex-grow">
          <app-root></app-root>
       </main>
    </body>
